# trabalho-eng-dados-spark-delta-minio-mongo

./: .env  .env.example  .gitignore  01_sqlserver_to_minio_csv.ipynb  03_dml_delta.ipynb  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
docs/: index.md
notebook/: 00_setup_mongo.ipynb  00_setup_sqlserver.ipynb  01_mongodb_to_minio_json.ipynb  02_csv_to_delta.ipynb  02_json_to_delta.ipynb  03_dml_delta.ipynb
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/search/: search_index.json
