[project]
name = "spark-delta-minio-sqlserver"
version = "0.1.0"
description = "Projeto Apache Spark com Delta Lake, MinIO e SQL Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.0",
    "delta-spark==3.2.0",
    "jupyterlab>=4.2.5",
    "ipykernel>=6.29.0",
    "pandas>=2.2.0",
    "pyodbc>=5.1.0",
    "pyspark==3.5.3",
    "python-dotenv>=1.0.0",
]
